bug squashing and small formatting

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ li {
 .player {
   border-radius: 30px;
   margin-bottom: 15px;
-  height: 150px;
+  height: 160px;
   width: 100%;
   text-align: center;
   color: white;
